// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`box-shadow: 5px 5px 10px rgba(0,0,0,0.3): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`box-shadow: 5px 5px 10px rgba(0,0,0,0.3): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "box-shadow": {
      "setterCode": "boxShadow(UniNativeBoxShadow(false, 5, 5, 10, 0, 0x4d000000))",
      "valueCode": "UniNativeBoxShadow(false, 5, 5, 10, 0, 0x4d000000)",
    },
  },
}
`;

exports[`box-shadow: 5px 5px red: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`box-shadow: 5px 5px red: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "box-shadow": {
      "setterCode": "boxShadow(UniNativeBoxShadow(false, 5, 5, 0, 0, 0xffff0000))",
      "valueCode": "UniNativeBoxShadow(false, 5, 5, 0, 0, 0xffff0000)",
    },
  },
}
`;

exports[`box-shadow: inset 0 0 5px #123456: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`box-shadow: inset 0 0 5px #123456: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "box-shadow": {
      "setterCode": "boxShadow(UniNativeBoxShadow(true, 0, 0, 5, 0, 0xff123456))",
      "valueCode": "UniNativeBoxShadow(true, 0, 0, 5, 0, 0xff123456)",
    },
  },
}
`;

exports[`box-shadow: invalid: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`box-shadow: invalid: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "box-shadow": {
      "setterCode": "boxShadow(UniNativeBoxShadow(false, 0, 0, 0, 0, 0))",
      "valueCode": "UniNativeBoxShadow(false, 0, 0, 0, 0, 0)",
    },
  },
}
`;

exports[`box-shadow: none: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`box-shadow: none: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "box-shadow": {
      "setterCode": "boxShadow(null)",
      "valueCode": "null",
    },
  },
}
`;

exports[`box-sizing: border-box: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "box-sizing": {
      "setterCode": "setStyleBoxSizing(UTSCPP.propertyAccess(UniCSSBoxSizingType, "::", "BorderBox"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBoxSizingType, "::", "BorderBox")",
    },
  },
}
`;

exports[`box-sizing: border-box: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`box-sizing: content-box: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "box-sizing": {
      "setterCode": "setStyleBoxSizing(UTSCPP.propertyAccess(UniCSSBoxSizingType, "::", "ContentBox"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBoxSizingType, "::", "ContentBox")",
    },
  },
}
`;

exports[`box-sizing: content-box: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;
